--- a/NEW2 Loafer/aws-infrastructure/lambda/api/package.json
+++ b/NEW2 Loafer/aws-infrastructure/lambda/api/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.965.0",
     "@aws-sdk/s3-request-presigner": "^3.965.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "stripe": "^20.1.2"
   }
 }
