--- a/NEW2 Loafer/package.json
+++ b/NEW2 Loafer/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.2",
+    "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.57.4",
     "aws-amplify": "^6.15.9",
     "lucide-react": "^0.344.0",
