--- a/NEW2 Loafer/package.json
+++ b/NEW2 Loafer/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.2",
+    "@imgly/background-removal": "^1.4.5",
     "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.57.4",
     "aws-amplify": "^6.15.9",
@@ -19,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
