--- a/NEW2 Loafer/package.json
+++ b/NEW2 Loafer/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.57.4",
     "aws-amplify": "^6.15.9",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
